update new functions
